#118: restore extensions on session startup, when default profile is requested