@@ -57,7 +57,7 @@ public class LaunchConfig {
 
     private static final List<String> COMMON_COMMAND_WHITE_LIST = Arrays.asList("echo", "lighthouse");
     @SuppressWarnings("unchecked")
-    private static final List<String> WINDOWS_COMMAND_WHITE_LIST = ListUtils.sum(COMMON_COMMAND_WHITE_LIST, Arrays.asList("cmdkey"));
+    private static final List<String> WINDOWS_COMMAND_WHITE_LIST = ListUtils.sum(COMMON_COMMAND_WHITE_LIST, List.of("cmdkey"));
     private static final List<String> LINUX_COMMAND_WHITE_LIST = COMMON_COMMAND_WHITE_LIST;
     private static final List<String> MAC_COMMAND_WHITE_LIST = COMMON_COMMAND_WHITE_LIST;
     public static final String RESTRICT_TO_TAGS = "sr:restrictToTags";
